--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
       <html lang="pl-PL">
        <html>
         <head>
@@ -23,4 +23,4 @@
 <LI> sprzedaż 
 <LI> 
  </UL>
-<a href="
+<a href="menu.html"> menu </a> <br>
