--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@ u<!DOCTYPE html>
 <LI> sprzedaż 
 <LI> 
  </UL>
-<p align="center"> <a href="menu.html"> menu </a> <br>
+<p align="center"> <a href="menu.html"> menu </a> </p> <br>
