--- a/menu.html
+++ b/menu.html
@@ -9,3 +9,4 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+<p align="center"> <font color="BLACK" size="7" face="arial"> To jest strona menu </font> </p> <br>
