--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                                                     <HR SIZE=6 WIDTH=100% ALIGN=CENTER COLOR=BLACK>                                                  
    <p align="center"> <img src="logo_Obrycki.jpg" BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </p> <br>
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
-<p align="center" <h4>Zakres działalności sklepu zoologicznego </h4>
+<p align="center"> <h4>Zakres działalności sklepu zoologicznego </h4>
   <UL TYPE=square> 
-<LI> sprzedaż zwierząt domowych 
-<LI> sprzedaż karmy dla zwierząt domowych
-<LI> sprzedaż zabawek dla zwierząt domowych
-<LI> sprzedaż 
-<LI> 
- </UL> </p>
+<p align="center"> <LI> sprzedaż zwierząt domowych 
+<p align="center"> <LI> sprzedaż karmy dla zwierząt domowych
+<p align="center"> <LI> sprzedaż zabawek dla zwierząt domowych
+<p align="center"> <LI> sprzedaż 
+<p align="center"> <LI> 
+ </UL> 
 <p align="center"> <a href="menu.html"> strona menu </a> </p> <br>
