--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                                                     <HR SIZE=6 WIDTH=100% ALIGN=CENTER COLOR=BLACK>                                                  
    <p align="center"> <img src="logo_Obrycki.jpg" BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </p> <br>
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
-<p align="center"> <h4>Zakres działalności sklepu zoologicznego </h4>
+<p align="center"> <h4>Zakres działalności sklepu zoologicznego </h4> </p>
   <UL TYPE=square> 
-<p align="center"> <LI> sprzedaż zwierząt domowych 
-<p align="center"> <LI> sprzedaż karmy dla zwierząt domowych
-<p align="center"> <LI> sprzedaż zabawek dla zwierząt domowych
-<p align="center"> <LI> sprzedaż 
-<p align="center"> <LI> 
+<p align="center"> <LI> sprzedaż zwierząt domowych </p>
+<p align="center"> <LI> sprzedaż karmy dla zwierząt domowych </p>
+<p align="center"> <LI> sprzedaż zabawek dla zwierząt domowych </p>
+<p align="center"> <LI> sprzedaż </p>
+<p align="center"> <LI> </p>
  </UL> 
 <p align="center"> <a href="menu.html"> strona menu </a> </p> <br>
