--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
 <p align="center"> <h4>Zakres działalności sklepu zoologicznego </h4> </p>
   <UL TYPE=square> 
-<p align="center"> <LI> sprzedaż zwierząt domowych </p>
-<p align="center"> <LI> sprzedaż karmy dla zwierząt domowych </p>
-<p align="center"> <LI> sprzedaż zabawek dla zwierząt domowych </p>
-<p align="center"> <LI> sprzedaż </p>
-<p align="center"> <LI> </p>
+<LI> sprzedaż zwierząt domowych </p>
+<LI> sprzedaż karmy dla zwierząt domowych </p>
+<LI> sprzedaż zabawek dla zwierząt domowych </p>
+<LI> sprzedaż </p>
+<LI> </p>
  </UL> 
 <p align="center"> <a href="menu.html"> strona menu </a> </p> <br>
