--- a/menu_Obrycki.html
+++ b/menu_Obrycki.html
@@ -10,3 +10,6 @@
 <body>
 <title> Wykonał Obrycki </title>
 <p align="center"> <font color="BLACK" size="7" face="arial"> To jest strona menu </font> </p> <br> 
+      <p align="center"> <a href="tabela_Obrycki.html"> strona tabeli </a> </p> <br>
+      <p align="center"> <a href="formularz_Obrycki.html"> strona formularza </a> </p> <br>
+      <p align="center"> <a href="poczta_Obrycki.html"> strona poczty </a> </p> <br>
