--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@
 <LI> sprzedaż </p>
 <LI> </p>
  </UL> 
-<p align="center"> <a href="menu.html"> strona menu </a> </p> <br>
+<p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p> <br>
