--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -10,3 +10,4 @@
 <body>
 <title> Wykonał Obrycki </title>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie tabela </font> </p> <br>
+<p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
