--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+      <body bgcolor="silver">treść strony></body>
 
                                                     <HR SIZE=5 WIDTH=50% ALIGN=LEFT COLOR=PURPLE>
    <p align="center"> <font color="RED" size="7" face="arial"> <i> Sklep zoologiczny </i> </font> </p> <br>
