--- a/formularz_Obrycki.html
+++ b/formularz_Obrycki.html
@@ -9,5 +9,6 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+<body bgcolor="GREEN">treść strony></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie formularz </font> </p> <br> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
