--- a/poczta_Obrycki.html
+++ b/poczta_Obrycki.html
@@ -9,5 +9,6 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+<body bgcolor="RED">treść strony></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Okienko do wysłania listu z Outlook </font> </p> <br> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
