--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -9,5 +9,6 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+<body bgcolor="PURPLE">treść strony></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie tabela </font> </p> <br>
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
