--- a/menu_Obrycki.html
+++ b/menu_Obrycki.html
@@ -9,6 +9,7 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
+<body background="logo_Obrycki.jpg">treść strony></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> To jest strona menu </font> </p> <br> 
       <p align="center"> <a href="tabela_Obrycki.html"> strona tabeli </a> </p> <br>
       <p align="center"> <a href="formularz_Obrycki.html"> strona formularza </a> </p> <br>
