--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                                                     <HR SIZE=6 WIDTH=100% ALIGN=CENTER COLOR=BLACK>                                                  
    <p align="center"> <img src="logo_Obrycki.jpg" BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </p> <br>
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
-<p align="center"> <h4>Zakres działalności sklepu zoologicznego </h4> </p>
+<h4>Zakres działalności sklepu zoologicznego </h4> 
   <UL TYPE=square> 
-<LI> sprzedaż zwierząt domowych </p>
-<LI> sprzedaż karmy dla zwierząt domowych </p>
-<LI> sprzedaż zabawek dla zwierząt domowych </p>
-<LI> sprzedaż </p>
-<LI> </p>
+<LI> sprzedaż zwierząt domowych 
+<LI> sprzedaż karmy dla zwierząt domowych
+<LI> sprzedaż zabawek dla zwierząt domowych 
+<LI> sprzedaż przedmiotów higienicznych dla zwierząt domowych
+<LI> sprzedarz transporterów, klatek, kojców dla zwierząt domowych
  </UL> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p> <br>
