--- a/index.html
+++ b/index.html
@@ -25,3 +25,4 @@
 <LI> sprzedarz transporterów, klatek, kojców dla zwierząt domowych
  </UL> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p> <br>
+<p align="right"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
