--- a/menu_Obrycki.html
+++ b/menu_Obrycki.html
@@ -14,3 +14,4 @@
       <p align="center"> <a href="tabela_Obrycki.html"> strona tabeli </a> </p> <br>
       <p align="center"> <a href="formularz_Obrycki.html"> strona formularza </a> </p> <br>
       <p align="center"> <a href="poczta_Obrycki.html"> strona poczty </a> </p> <br>
+<p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
