--- a/formularz_Obrycki.html
+++ b/formularz_Obrycki.html
@@ -9,7 +9,7 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
-<body bgcolor="GREEN">treść strony></body>
+<body bgcolor="GREEN"></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie formularz </font> </p> <br> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
