--- a/poczta_Obrycki.html
+++ b/poczta_Obrycki.html
@@ -9,7 +9,7 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
-<body bgcolor="RED">treść strony></body>
+<body bgcolor="RED"></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Okienko do wysłania listu z Outlook </font> </p> <br> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
