--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -9,7 +9,7 @@
         </head>
 <body>
 <title> Wykonał Obrycki </title>
-<body bgcolor="PURPLE">treść strony></body>
+<body bgcolor="PURPLE"></body>
 <p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie tabela </font> </p> <br>
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
