--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                                                     <HR SIZE=5 WIDTH=50% ALIGN=LEFT COLOR=PURPLE>
    <p align="center"> <font color="RED" size="7" face="arial"> <i> Sklep zoologiczny </i> </font> </p> <br>
                                                     <HR SIZE=6 WIDTH=100% ALIGN=CENTER COLOR=BLACK>                                                  
-   <p align="center"> <img src="logo_Obrycki.jpg"> BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </p> <br>
+   <p align="center"> <img src="logo_Obrycki.jpg"> BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </img> </p> <br>
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
 <h4>Zakres działalności sklepu zoologicznego </h4> 
   <UL TYPE=square> 
