--- a/poczta_Obrycki.html
+++ b/poczta_Obrycki.html
@@ -13,3 +13,4 @@
 <p align="center"> <font color="BLACK" size="7" face="arial"> Okienko do wysłania listu z Outlook </font> </p> <br> 
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
+<p align="center"> <a href="index.html"> WRÓĆ </a> </p> <br>
