--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <body bgcolor="silver"></body>
 
                                                     <HR SIZE=5 WIDTH=50% ALIGN=LEFT COLOR=PURPLE>
-   <p align="center"> <font color="RED" size="7" face="arial"> <i> Sklep zoologiczny </i> </font> </p> <br>
+   <p align="center"> <font color="RED" size="7" face="Verdana"> <i> Sklep zoologiczny </i> </font> </p> <br>
                                                     <HR SIZE=6 WIDTH=100% ALIGN=CENTER COLOR=BLACK>                                                  
    <p align="center"> <img src="logo_Obrycki.jpg" BORDER="6" WIDTH="700" HEIGHT="200" ALT=„pies”> </p> <br>
                                                     <HR SIZE=7 WIDTH=60% ALIGN=RIGHT COLOR=DARKBLUE>                                                  
