--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -10,6 +10,16 @@
 <body>
 <title> Wykonał Obrycki </title>
 <body bgcolor="PURPLE"></body>
-<p align="center"> <font color="BLACK" size="7" face="arial"> Tutaj będzie tabela </font> </p> <br>
+<TABLE border=3>
+<thead>
+<tr>
+<th>h</th>
+<th>h</th>
+<th>h</th>
+<th>h</th>
+<th>h</th>
+</tr>
+</thead>
+</TABLE>
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
