--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -20,6 +20,29 @@
 <th>h</th>
 </tr>
 </thead>
+      <tbody>
+<tr>
+<td>Komórka 1</td>
+<td>Komórka 2</td>
+<td>Komórka 3</td>
+<td>Komórka 4</td>
+<td>Komórka 5</td>
+</tr>
+<tr>
+<td>Komórka 6</td>
+<td>Komórka 7</td>
+<td>Komórka 8</td>
+<td>Komórka 9</td>
+<td>Komórka 10</td>
+</tr>
+<tr>
+<td>Komórka 11</td>
+<td>Komórka 12</td>
+<td>Komórka 13</td>
+<td>Komórka 14</td>
+<td>Komórka 15</td>
+</tr>
+</tbody>
 </TABLE>
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
