--- a/tabela_Obrycki.html
+++ b/tabela_Obrycki.html
@@ -10,7 +10,7 @@
 <body>
 <title> Wykonał Obrycki </title>
 <body bgcolor="PURPLE"></body>
-<TABLE border=3>
+<p align=CENTER> <TABLE border=3>
 <thead>
 <tr>
 <th>h</th>
@@ -43,6 +43,6 @@
 <td>Komórka 15</td>
 </tr>
 </tbody>
-</TABLE>
+</TABLE> </p>
 <p align="center"> <a href="menu_Obrycki.html"> strona menu </a> </p>
 <p align="left"> <font color="BLACK" size="2" face="arial"> &copy Błażej Obrycki </font> </p> <br>
